Se añaden mejoras en el index y se inicia con la construccion de la vista de clases

--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
         <h2>Bienvenido a WOLF ZONE</h2>
         <p>¡Donde la manada entrena para ser más fuerte!</p>
     </section>
+    <section class="carrusel">
+        <h3>Nuestras Clases en Acción</h3>
+        <div class="carousel-container">
+            <div class="carousel-slide">
+                <img src="imagenes/cardi.jpg" alt="Imagen 1">
+                <img src="imagenes/pesas.jpg" alt="Imagen 2">
+                <img src="imagenes/ejercicio.jpg" alt="Imagen 3">
+                <img src="imagenes/abs.jpg" alt="Imagen 4">
+                <img src="imagenes/prensa.jpg" alt="Imagen 5">
+                <img src="imagenes/cuerda.jpg" alt="Imagen 6">
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <h3>¿Quiénes somos?</h3>
+        <p>En WOLF ZONE, creemos en el poder del entrenamiento y la comunidad. Ofrecemos un espacio donde todos pueden alcanzar sus metas de salud y fitness.</p>
+    </section>
 
     <footer>
         <p>&copy; 2024 WOLF ZONE. Todos los derechos reservados.</p>
