Actualización de las vistas faltantes del aplicativo para gestion de gimnasios

--- a/pagos.html
+++ b/pagos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagos - WOLF ZONE</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="pagos.css">
 </head>
 <body>
     <header>
@@ -30,11 +30,15 @@
 
     <section class="membership-plans">
         <h3>Planes de Membresía</h3>
-        <ul>
-            <li><strong>Mensual:</strong> $50. Acceso ilimitado a todas las instalaciones.</li>
-            <li><strong>Trimestral:</strong> $130. Ahorra un 10% en comparación con el plan mensual.</li>
-            <li><strong>Anual:</strong> $450. Ahorra un 25% y disfruta de todos los beneficios.</li>
-        </ul>
+        <div class="plan">
+            <strong>Mensual:</strong> $50. Acceso ilimitado a todas las instalaciones.
+        </div>
+        <div class="plan">
+            <strong>Trimestral:</strong> $130. Ahorra un 10% en comparación con el plan mensual.
+        </div>
+        <div class="plan">
+            <strong>Anual:</strong> $450. Ahorra un 25% y disfruta de todos los beneficios.
+        </div>
     </section>
 
     <footer>
