--- a/sedes.html
+++ b/sedes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestras sedes - WOLF ZONE</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="sedes.css">
 </head>
 <body>
     <header>
